Finished project report

--- a/ProjectReport/LaTeX/Literature.bib
+++ b/ProjectReport/LaTeX/Literature.bib
@@ -72,7 +72,7 @@ in bipolarer Technik},
 
 @book{agbezuge,
   title={Transient Heat Transfer in a Partially Cooled Cylindrical Rod, Transactions of the ASME Vol. 131},
-  auhor={Lawrence Agbezuge},
+  author={Lawrence Agbezuge},
   year={2009},
   publisher={ASME Digital Collection}
 }
@@ -121,6 +121,6 @@ in bipolarer Technik},
 @book{zitat2,
   title={Werner Heisenberg},
   publisher={Across the Frontiers, 1972},
-  author={it is stranger than we can think. \; \; \; \; \;  , Not only is the Universe stranger than we think}
+  author={it is stranger than we can think. \; \; \; \; \; \; \;  , Not only is the Universe stranger than we think}
 }
 
